[project]
name = "gaze-to-screen-calibration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "python-fasthtml>=0.12.5",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
